--- a/src/rss-help.html
+++ b/src/rss-help.html
@@ -11,7 +11,6 @@
         margin-bottom: -40px;
     }
     p.example {
-        /*font-weight: bold;*/
         color: #2a385b;
     }
     </style>
@@ -20,6 +19,10 @@
     <p>
     In order to process your CruiseControl server's build reports, you must
     provide Build Watch with the URL of your server's RSS feed.
+    </p>
+
+    <p>
+    <b>Note:</b> RSS URLs are case-sensitive.
     </p>
 
     <h3>CruiseControl.rb</h3>
