Small changes to the add server help file.

--- a/src/rss-help.html
+++ b/src/rss-help.html
@@ -18,7 +18,7 @@
 <body>
     <p>
     In order to process your CruiseControl server's build reports, you must
-    provide Build Watch with the URL of your server's RSS feed.
+    provide Build Watch with the URL of your server dashboard's RSS feed.
     </p>
 
     <p>
@@ -43,11 +43,13 @@
     <p class="example">http://builder.com/ViewFarmReport.aspx</p>
     <p>then the RSS feed's URL will be:</p>
     <p class="example">http://builder.com/XmlServerReport.aspx</p>
+    <p>You can confirm this by typing the URL into your web browser.</p>
 
     <h3>CruiseControl for Java</h3>
     <p>
-    Build Watch needs to be supplied with the RSS feed that's compatible with
-    CCTray. The link for this feed is listed on the right of the CruiseControl
+    CruiseControl for Java provides a number of RSS feeds. Build Watch
+    needs to be supplied with the feed that's compatible with CCTray. The
+    link for this feed is listed on the right of the CruiseControl
     dashboard, in the "Tools" section. The URL will look like:
     </p>
     <p class="example">http://builder.com/dashboard/cctray.xml</p>
