Small changes to RSS help file.

--- a/src/rss-help.html
+++ b/src/rss-help.html
@@ -43,7 +43,10 @@
     <p class="example">http://builder.com/ViewFarmReport.aspx</p>
     <p>then the RSS feed's URL will be:</p>
     <p class="example">http://builder.com/XmlServerReport.aspx</p>
-    <p>You can confirm this by typing the URL into your web browser.</p>
+    <p>
+    You can confirm this by entering the URL in your web browser before
+    trying to add it to Build Watch.
+    </p>
 
     <h3>CruiseControl for Java</h3>
     <p>
