Added note to help that the URL protocol is required.

--- a/src/rss-help.html
+++ b/src/rss-help.html
@@ -22,7 +22,8 @@
     </p>
 
     <p>
-    <b>Note:</b> RSS URLs are case-sensitive.
+    <b>Note:</b> RSS URLs are case-sensitive and should begin with the
+    protocol, such as "http://".
     </p>
 
     <h3>CruiseControl.rb</h3>
