Clarified the 'add server' help.

--- a/src/rss-help.html
+++ b/src/rss-help.html
@@ -53,9 +53,15 @@
     <p>
     CruiseControl for Java provides a number of RSS feeds. Build Watch
     needs to be supplied with the feed that's compatible with CCTray. The
-    link for this feed is listed on the right of the CruiseControl
-    dashboard, in the "Tools" section. The URL will look like:
+    link for this feed is labeled "CCtray" and is listed on the right side of
+    the CruiseControl dashboard, in the "Tools" section. The URL will end in
+    "cctray.xml". For example:
     </p>
     <p class="example">http://builder.com/dashboard/cctray.xml</p>
+    <p>
+    <b>Note:</b> CruiseControl servers have two dashboards. Make sure you're
+    looking at the dashboard with the word "dashboard" in the URL, as in the
+    example above.
+    </p>
 </body>
 </html>
